@@ -7,7 +7,7 @@ Gedafe
 #endif
 </TITLE></HEAD>
 <BODY  text="#000000" link="#0000FF" 
-#if ##USER## = isgroot
+#if ##USER## = admin
 
 bgcolor="#ffee00"
 #else
